--- a/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -8,7 +8,7 @@
             <EntIcon class="ent-nav-menu-group-item-icon"  Icon="@Icon"/>
         }
         <span class="ent-nav-menu-group-item-title">@Title</span>
-        <EntIcon class="ent-nav-menu-group-item-arrow-icon"  Icon="@Icons.ChevronDown"/>
+        <EntIcon class="ent-nav-menu-group-item-arrow-icon"  Icon="@EntIcons.ChevronDown"/>
     </div>
 
     <div class="@ContainerCss">@ChildContent</div>
