--- a/Enter.UI/Styles/components/_components.scss
+++ b/Enter.UI/Styles/components/_components.scss
@@ -3,6 +3,7 @@
 @import "ent_app_bar.component";
 @import "ent_card.component";
 @import "ent_form.component";
+@import "ent_expandable.component";
 @import "ent_modal.component";
 @import "ent_nav_menu.component";
 @import "ent_layout.component";
@@ -10,3 +11,4 @@
 @import "ent_popover.component";
 @import "ent_overlay.component";
 @import "ent_list.component";
+@import "ent_treeview.component";
