--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -9,23 +9,23 @@
             <div class="row">
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>شناسه</label>
-                    <EntTextInput Disabled="true" @bind-Value="Input.Id" Icon="@Icons.ChevronLeft" />
+                    <EntInputText Disabled="true" @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
                     <ValidationMessage For="() => Input!.Id" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>کاربر</label>
-                    <EntAutoCompleteInput @bind-Value="Input.User"
-                                          SelectedValue="x=>x.Name"
-                                          SelectedText="x=>x.Name"
+                    <EntInputAutoComplete @bind-Value="Input.User"
+                                          ValueFunc="x=>x.Name"
+                                          TextFunc="x=>x.Name"
                                           DataSources="DataSource"
-                                          Icon="@Icons.Search"
+                                          Icon="@EntIcons.Search"
                                           OnSearchChange="OnLastNameSearchChange"/>
                     <ValidationMessage For="() => Input!.User" />
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>نقش</label>
 
-                    <EntSelect @bind-Value="Input.Role"
+                    <EntInputSelect @bind-Value="Input.Role"
                                PlaceHolder="نقش مورد نظر را انتخاب نمایید"
                                DataSources="Constants.Roles"
                                ValueFunc="x=>x.Value"
@@ -35,7 +35,7 @@
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label>سن</label>
-                    <EntTextInput @bind-Value="Input.Age" />
+                    <EntInputText @bind-Value="Input.Age" />
                     <ValidationMessage For="() => Input!.Age" />
                 </div>
             </div>
@@ -74,6 +74,7 @@
     private async Task OnSubmit()
     {
         Input.Role = "Developer";
+        StateHasChanged();
         Console.WriteLine(Input.User);
     }
 
