--- a/Enter.UI/Styles/components/_ent_expandable.component.scss
+++ b/Enter.UI/Styles/components/_ent_expandable.component.scss
@@ -1,5 +1,25 @@
-.ent-expandable {
+@keyframes mud-expand-anim {
+  from {
     height: 0;
-    transition: height 0.25s ease;
-    overflow:hidden;
+  }
+}
+
+@keyframes mud-collapse-anim {
+  to {
+    height: 0;
+  }
+}
+
+.ent-expandable {
+  overflow: hidden;
+  height: 0px;
+    
+  &.ent-expandable-opening {
+    animation: mud-expand-anim 0.25s ease-in-out 0ms 1 forwards;
+  }
+
+  &.ent-expandable-closing {
+    animation: mud-collapse-anim 0.25s cubic-bezier(0, 1, 0, 1) 0ms 1 forwards;
+  }
+
 }
