--- a/Enter.UI/Components/Popover/EntPopover.razor
+++ b/Enter.UI/Components/Popover/EntPopover.razor
@@ -5,7 +5,7 @@
 @using Enter.UI.Core.Extensions
 @inherits EntBaseComponent
 
-<div class="@RootClass" id="@($"ent-popover-{_id}")">
+<div  @attributes="AdditionalAttributes" class="@RootClass" id="@($"ent-popover-{_id}")">
 
 </div>
 
