--- a/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -2,6 +2,7 @@
 @namespace Enter.UI.Components
 <EntTab @ref="Tab"
         @attributes="@AdditionalAttributes"
+        class="@RootCss"
         ItemClass="@ItemClass"
         Direction="@Direction"
         ItemDirection="@ItemDirection"
