--- a/Enter.UI/Components/Utilities/Flex/EntFlex.razor
+++ b/Enter.UI/Components/Utilities/Flex/EntFlex.razor
@@ -28,32 +28,32 @@
         .AddClass($"screen:{_flexColumn}", ScreenDirection != null && ScreenDirection == FlexDirection.Column)
 
         // flex align css
-        .AddClass($"items-center justify-centert", Align == FlexAlign.Center)
+        .AddClass($"items-center justify-center", Align == FlexAlign.Center)
         .AddClass($"items-center justify-start", Align == FlexAlign.StartCenter)
         .AddClass($"items-center justify-end", Align == FlexAlign.EndCenter)
 
-        .AddClass($"mobile:items-center mobile:justify-centert", MobileAlign != null && MobileAlign == FlexAlign.Center)
+        .AddClass($"mobile:items-center mobile:justify-center", MobileAlign != null && MobileAlign == FlexAlign.Center)
         .AddClass($"mobile:items-center mobile:justify-start", MobileAlign != null && MobileAlign == FlexAlign.StartCenter)
         .AddClass($"mobile:items-center mobile:justify-end", MobileAlign != null && MobileAlign == FlexAlign.EndCenter)
 
-        .AddClass($"tablet:items-center tablet:justify-centert", TabletAlign != null && TabletAlign == FlexAlign.Center)
+        .AddClass($"tablet:items-center tablet:justify-center", TabletAlign != null && TabletAlign == FlexAlign.Center)
         .AddClass($"tablet:items-center tablet:justify-start", TabletAlign != null && TabletAlign == FlexAlign.StartCenter)
         .AddClass($"tablet:items-center tablet:justify-end", TabletAlign != null && TabletAlign == FlexAlign.EndCenter)
 
-        .AddClass($"laptop:items-center laptop:justify-centert", LaptopAlign != null && LaptopAlign == FlexAlign.Center)
+        .AddClass($"laptop:items-center laptop:justify-center", LaptopAlign != null && LaptopAlign == FlexAlign.Center)
         .AddClass($"laptop:items-center laptop:justify-start", LaptopAlign != null && LaptopAlign == FlexAlign.StartCenter)
         .AddClass($"laptop:items-center laptop:justify-end", LaptopAlign != null && LaptopAlign == FlexAlign.EndCenter)
 
-        .AddClass($"desktop:items-center desktop:justify-centert", DesktopAlign != null && DesktopAlign == FlexAlign.Center)
+        .AddClass($"desktop:items-center desktop:justify-center", DesktopAlign != null && DesktopAlign == FlexAlign.Center)
         .AddClass($"desktop:items-center desktop:justify-start", DesktopAlign != null && DesktopAlign == FlexAlign.StartCenter)
         .AddClass($"desktop:items-center desktop:justify-end", DesktopAlign != null && DesktopAlign == FlexAlign.EndCenter)
 
-        .AddClass($"screen:items-center screen:justify-centert", ScreenAlign != null && ScreenAlign == FlexAlign.Center)
+        .AddClass($"screen:items-center screen:justify-center", ScreenAlign != null && ScreenAlign == FlexAlign.Center)
         .AddClass($"screen:items-center screen:justify-start", ScreenAlign != null && ScreenAlign == FlexAlign.StartCenter)
         .AddClass($"screen:items-center screen:justify-end", ScreenAlign != null && ScreenAlign == FlexAlign.EndCenter)
 
 
-        .AddClass($"gap-{Gap}")
+        .AddClass($"gap-{Gap}", Gap.HasValue)
         .AddClass($"mobile:gap-{MobileGap}", MobileGap.HasValue)
         .AddClass($"tablet:gap-{TabletGap}", TabletGap.HasValue)
         .AddClass($"laptop:gap-{LaptopGap}", LaptopGap.HasValue)
@@ -107,7 +107,7 @@
 
     // Flex Direction
     [Parameter]
-    public decimal Gap { get; set; } = 0;
+    public decimal? Gap { get; set; } 
 
     [Parameter]
     public decimal? MobileGap { get; set; }
